--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title:
-email:
+title: Deep Labs
+email: contact@deep-labs.com
 description: > # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+baseurl: "deep-labs.com" # the subpath of your site, e.g. /blog/
+url: "deep-labs.com" # the base hostname & protocol for your site
 
 twitter_username:
 github_username:
